<resources>
    <string name="app_name">PlatNumber</string>
    <string name="add_carnumber">添加车牌号</string>
    <string name="jing">京</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="input_carnumber_error">车牌号未填写完整，请检查！</string>


</resources>
